2007-03-21  Tim-Philipp Müller  <tim at centricular dot net>

	* gst/apetag/gsttagdemux.c: (gst_tag_demux_get_type):
	  Rename registered type in preparation of GstTagDemux moving to
	  -base at some point in the future.

2007-03-19  Tim-Philipp Müller  <tim at centricular dot net>

	* gst/wavparse/gstwavparse.c: (gst_wavparse_stream_headers):
	  Streaming mode fixes: don't unref buffer we don't own any longer;
	  remove bogus adapter flush. Fixes #419338.

2007-03-17  David Schleef  <ds@schleef.org>

	* REQUIREMENTS: Change the format to key/value, add a bunch of
	  information, remove a bunch of requirements that are for
	  other GStreamer packages.

2007-03-17  David Schleef  <ds@schleef.org>

	* REQUIREMENTS: Fix a few things.  This file really needs a
	good once-over.

2007-03-15  Edward Hervey  <edward@fluendo.com>

	* sys/Makefile.am:
	Don't forget to distribute the sys/osxaudio/ directory.

2007-03-15  Edward Hervey  <edward@fluendo.com>

	* configure.ac:
	* sys/Makefile.am:
	* sys/osxaudio/Makefile.am:
	* sys/osxaudio/gstosxaudio.c:
	* sys/osxaudio/gstosxaudiosink.c:
	(gst_osx_audio_sink_osxelement_do_init), (gst_osx_audio_sink_init),
	(gst_osx_audio_sink_getcaps),
	(gst_osx_audio_sink_create_ringbuffer), (plugin_init):
	* sys/osxaudio/gstosxaudiosrc.c:
	(gst_osx_audio_src_osxelement_do_init), (gst_osx_audio_src_init),
	(gst_osx_audio_src_create_ringbuffer):
	* sys/osxaudio/gstosxringbuffer.c: (gst_osx_ring_buffer_get_type),
	(gst_osx_ring_buffer_class_init), (gst_osx_ring_buffer_init),
	(gst_osx_ring_buffer_acquire), (gst_osx_ring_buffer_start),
	(gst_osx_ring_buffer_pause), (gst_osx_ring_buffer_stop):
	* sys/osxaudio/gstosxringbuffer.h:
	Activate osxaudio in gst-plugins-good with proper build setup.
	Add inlined documentation.
	Fix debug statements
	Fix ringbuffer when pausing.
	Fixes #323471

2007-03-14 Philippe Kalaf <philippe.kalaf@collabora.co.uk> 	 
	* gst/rtp/gstrtppcmapay.c:
	* gst/rtp/gstrtppcmapay.h:
	* gst/rtp/gstrtppcmupay.c: